consulta con filtros para taller

--- a/src/app/verSolicitud/verSolicitud.component.html
+++ b/src/app/verSolicitud/verSolicitud.component.html
@@ -20,7 +20,199 @@
             </tbody>
         </table> -->
         <p-growl [value]="msgs" sticky="sticky"></p-growl>
+        <h3>Todas las solicitudes</h3>
         <p-table #dt [columns]="cols" [value]="solicitudesSource" [paginator]="true" [rows]="10" [responsive]="true" totalRecords="100"  [(selection)]="_solicitudSelected" >
+
+            <ng-template pTemplate="caption">
+                <div style="text-align: right">        
+                    <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
+                    <input type="text" pInputText size="30" placeholder="Buscar" (input)="dt.filterGlobal($event.target.value, 'contains')" style="width:auto">
+                </div>
+            </ng-template>
+            <ng-template pTemplate="header" let-columns>
+                <tr>
+                   <th style="width: 3em">
+                        <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
+                    </th>
+                    <th *ngFor="let col of columns">
+                        {{col.header}}
+                    </th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-rowData let-columns="columns">
+                <tr [pSelectableRow]="rowData">
+                    <td>
+                        <p-tableCheckbox [value]="rowData"></p-tableCheckbox>
+                    </td>
+                    <td *ngFor="let col of columns" >
+                        {{rowData[col.field]}}
+                     </td>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="summary">
+                <ul>
+                    <li *ngFor="let sol of _solicitudSelected" style="text-align: left">
+                       <a [routerLink]= "['/verSolicitud',sol.codigoSolicitud,sol.id]"> {{sol.codigoSolicitud}} </a>
+                    </li>
+                </ul>
+            </ng-template>
+        </p-table>
+
+<br/>
+        <h5>solicitudes anulada</h5>
+        <p-table #dt [columns]="cols" [value]="solicitudesANUSource" [paginator]="true" [rows]="10" [responsive]="true" totalRecords="100"  [(selection)]="_solicitudSelected" >
+            <ng-template pTemplate="caption">
+                <div style="text-align: right">        
+                    <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
+                    <input type="text" pInputText size="30" placeholder="Buscar" (input)="dt.filterGlobal($event.target.value, 'contains')" style="width:auto">
+                </div>
+            </ng-template>
+            <ng-template pTemplate="header" let-columns>
+                <tr>
+                   <th style="width: 3em">
+                        <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
+                    </th>
+                    <th *ngFor="let col of columns">
+                        {{col.header}}
+                    </th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-rowData let-columns="columns">
+                <tr [pSelectableRow]="rowData">
+                    <td>
+                        <p-tableCheckbox [value]="rowData"></p-tableCheckbox>
+                    </td>
+                    <td *ngFor="let col of columns" >
+                        {{rowData[col.field]}}
+                     </td>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="summary">
+                <ul>
+                    <li *ngFor="let sol of _solicitudSelected" style="text-align: left">
+                       <a [routerLink]= "['/verSolicitud',sol.codigoSolicitud,sol.id]"> {{sol.codigoSolicitud}} </a>
+                    </li>
+                </ul>
+            </ng-template>
+        </p-table>
+<br/>
+        <h5>Despachada por proveedor</h5>
+        <p-table #dt [columns]="cols" [value]="solicitudesDEPSource" [paginator]="true" [rows]="10" [responsive]="true" totalRecords="100"  [(selection)]="_solicitudSelected" >
+            <ng-template pTemplate="caption">
+                <div style="text-align: right">        
+                    <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
+                    <input type="text" pInputText size="30" placeholder="Buscar" (input)="dt.filterGlobal($event.target.value, 'contains')" style="width:auto">
+                </div>
+            </ng-template>
+            <ng-template pTemplate="header" let-columns>
+                <tr>
+                   <th style="width: 3em">
+                        <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
+                    </th>
+                    <th *ngFor="let col of columns">
+                        {{col.header}}
+                    </th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-rowData let-columns="columns">
+                <tr [pSelectableRow]="rowData">
+                    <td>
+                        <p-tableCheckbox [value]="rowData"></p-tableCheckbox>
+                    </td>
+                    <td *ngFor="let col of columns" >
+                        {{rowData[col.field]}}
+                     </td>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="summary">
+                <ul>
+                    <li *ngFor="let sol of _solicitudSelected" style="text-align: left">
+                       <a [routerLink]= "['/verSolicitud',sol.codigoSolicitud,sol.id]"> {{sol.codigoSolicitud}} </a>
+                    </li>
+                </ul>
+            </ng-template>
+        </p-table>
+
+        <br/>
+        <h5>Entregado a satisfacción del cliente</h5>
+        <p-table #dt [columns]="cols" [value]="solicitudesESCSource" [paginator]="true" [rows]="10" [responsive]="true" totalRecords="100"  [(selection)]="_solicitudSelected" >
+            <ng-template pTemplate="caption">
+                <div style="text-align: right">        
+                    <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
+                    <input type="text" pInputText size="30" placeholder="Buscar" (input)="dt.filterGlobal($event.target.value, 'contains')" style="width:auto">
+                </div>
+            </ng-template>
+            <ng-template pTemplate="header" let-columns>
+                <tr>
+                   <th style="width: 3em">
+                        <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
+                    </th>
+                    <th *ngFor="let col of columns">
+                        {{col.header}}
+                    </th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-rowData let-columns="columns">
+                <tr [pSelectableRow]="rowData">
+                    <td>
+                        <p-tableCheckbox [value]="rowData"></p-tableCheckbox>
+                    </td>
+                    <td *ngFor="let col of columns" >
+                        {{rowData[col.field]}}
+                     </td>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="summary">
+                <ul>
+                    <li *ngFor="let sol of _solicitudSelected" style="text-align: left">
+                       <a [routerLink]= "['/verSolicitud',sol.codigoSolicitud,sol.id]"> {{sol.codigoSolicitud}} </a>
+                    </li>
+                </ul>
+            </ng-template>
+        </p-table>
+
+
+        <br/>
+        <h5>CERRADA POR DESIERTA</h5>
+        <p-table #dt [columns]="cols" [value]="solicitudesCPDSource" [paginator]="true" [rows]="10" [responsive]="true" totalRecords="100"  [(selection)]="_solicitudSelected" >
+            <ng-template pTemplate="caption">
+                <div style="text-align: right">        
+                    <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
+                    <input type="text" pInputText size="30" placeholder="Buscar" (input)="dt.filterGlobal($event.target.value, 'contains')" style="width:auto">
+                </div>
+            </ng-template>
+            <ng-template pTemplate="header" let-columns>
+                <tr>
+                   <th style="width: 3em">
+                        <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
+                    </th>
+                    <th *ngFor="let col of columns">
+                        {{col.header}}
+                    </th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-rowData let-columns="columns">
+                <tr [pSelectableRow]="rowData">
+                    <td>
+                        <p-tableCheckbox [value]="rowData"></p-tableCheckbox>
+                    </td>
+                    <td *ngFor="let col of columns" >
+                        {{rowData[col.field]}}
+                     </td>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="summary">
+                <ul>
+                    <li *ngFor="let sol of _solicitudSelected" style="text-align: left">
+                       <a [routerLink]= "['/verSolicitud',sol.codigoSolicitud,sol.id]"> {{sol.codigoSolicitud}} </a>
+                    </li>
+                </ul>
+            </ng-template>
+        </p-table>
+
+        <br/>
+        <h5>CERRADA POR ASEGURADORA</h5>
+        <p-table #dt [columns]="cols" [value]="solicitudesCEASource" [paginator]="true" [rows]="10" [responsive]="true" totalRecords="100"  [(selection)]="_solicitudSelected" >
             <ng-template pTemplate="caption">
                 <div style="text-align: right">        
                     <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
