--- a/src/app/crearSolicitud/crearSolicitud.component.html
+++ b/src/app/crearSolicitud/crearSolicitud.component.html
@@ -142,6 +142,6 @@
   <!-- BOTONES -->
   <div>
     <button class="button" style="display:inline-block;padding: 20px;margin:20px;" type="submit" (click)="limpiarForm()">Cancelar</button>
-    <button class="button" style="display:inline-block;padding: 20px;margin:20px;" type="submit" (click)="guardarSolicitud('Pendiente' ,rowData)">Guardar</button>
-    <button class="button" style="display:inline-block;padding: 20px;margin:20px;" type="submit" (click)="guardarSolicitud('Enviar',rowData)">Enviar</button>
+    <!-- <button class="button" style="display:inline-block;padding: 20px;margin:20px;" type="submit" (click)="guardarSolicitud('Pendiente' ,rowData)">Guardar</button> -->
+    <button class="button" style="display:inline-block;padding: 20px;margin:20px;" type="submit" (click)="guardarSolicitud('ING',rowData)">Enviar</button>
 </div>
