--- a/src/app/solicitudProveedor/guardarRepSol.component.html
+++ b/src/app/solicitudProveedor/guardarRepSol.component.html
@@ -95,3 +95,8 @@
             </div>
         </div>   
   </form>
+
+   <!-- BOTONES -->
+   <div>
+    <button class="button" style="display:inline-block;padding: 20px;margin:20px;" type="submit" (click)="guardarRepuesto()">Guardar</button>
+</div>
