--- a/src/app/shared/star.component.html
+++ b/src/app/shared/star.component.html
@@ -15,13 +15,16 @@
   <div class="row">
     <div class="col s12">
         <h3>Carga de archvos</h3>
-        <p-fileUpload name="myfile[]" url="C:\Proyectos\original\aseguradora\aseguradora\src\app\upload" withCredentials="false" customUpload="true" (uploadHandler)="addHeaders($event)" method="POST" multiple="multiple" accept="image/*">
-          <!-- <p-fileUpload name="myfile[]" url="././upload" (onUpload)="onUpload($event)" multiple="multiple" accept="image/*"> -->
-          <ng-template pTemplate="content">
+        <!-- <p-fileUpload name="myfile[]" url="C:\Proyectos\original\aseguradora\aseguradora\src\app\upload" withCredentials="false" customUpload="true" (uploadHandler)="addHeaders($event)" method="POST" multiple="multiple" accept="image/*">
+         <ng-template pTemplate="content">
             <ul *ngIf="uploadedFiles.length">
                 <li *ngFor="let file of uploadedFiles">{{file.name}} - {{file.size}} bytes</li>
             </ul>
-        </ng-template></p-fileUpload>
+        </ng-template></p-fileUpload> -->
+        <input id="file-upload" type="file" (change)="fileSelected($event)">
+            <button type="button" class="btn btn-success" (click)="subirArchivo()">
+                Subir Imagen
+            </button>
     </div>
   </div>
 
