--- a/src/app/solicitudProveedor/solicitudProveedor.component.html
+++ b/src/app/solicitudProveedor/solicitudProveedor.component.html
@@ -50,7 +50,7 @@
             <ng-template pTemplate="summary">
                 <ul>
                     <li *ngFor="let sol of _solicitudSelected" style="text-align: left">
-                       <a [routerLink]= "['/solicitudProveedor',sol.codigoSolicitud,sol.id]"> {{sol.codigoSolicitud}} </a>
+                       <a [routerLink]= "['/guardarRepSol',sol.codigoSolicitud,sol.id]"> {{sol.codigoSolicitud}} </a>
                     </li>
                 </ul>
             </ng-template>
