--- a/src/app/verSolicitud/solicitudDetail.component.html
+++ b/src/app/verSolicitud/solicitudDetail.component.html
@@ -73,15 +73,40 @@
               </div>
           </div>
           <div>
-              <div class="input-field" style="display:inline-block;padding: 20px;">
-                  <label for="repuestos">Repuestos</label><br/><br/>
-                  <input type="text" id="repuestos" formControlName="repuestos" class="validate" required disabled/>
-              </div>
-              <div class="input-field" style="display:inline-block;padding: 20px;">
-                  <label for="cantidadRep">Cantidad</label><br/><br/>
-                  <input type="text" id="cantidadRep" formControlName="cantidadRep" class="validate" required disabled/>
-              </div>
-
+            <h4>Repuesto solicitados</h4>
+            <p-listbox [options]="repuestos" [listStyle]="{'max-height':'300px'}" [readonly]="true">
+              <ng-template let-rep pTemplate="item">
+                <div class="ui-helper-clearfix">
+                  <span style="float:left;margin:20px 10px 10px 10px">{{rep.label}}</span>
+                 </div>
+              </ng-template>
+            </p-listbox>
+          </div>
+          <div>
+            <p-carousel [value]="images" [numVisible]="4" [numScroll]="3" [circular]="false" [responsiveOptions]="responsiveOptions">
+                <p-header>
+                    <h3>Fotos</h3>
+                </p-header>
+                <ng-template let-car pTemplate="item">
+                    <div class="car-details">
+                        <div class="p-grid p-nogutter">
+                            <div class="p-col-12">
+                                <img src="assets/showcase/images/demo/car/{{car.brand}}.png" />
+                            </div>
+                            <div class="p-col-12 car-data">
+                                <div class="car-title">{{car.brand}}</div>
+                                <div class="car-subtitle">{{car.year}} | {{car.color}}</div>
+            
+                                <div class="car-buttons">
+                                    <button pButton type="button" class="ui-button-secondary" icon="pi pi-search"></button>
+                                    <button pButton type="button" class="ui-button-secondary" icon="pi pi-star"></button>
+                                    <button pButton type="button" class="ui-button-secondary" icon="pi pi-cog"></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </ng-template>
+            </p-carousel>
           </div>
           <div>
               <div class="input-field" style="display:inline-block;padding: 20px;">
